--- a/query/src/app/home/home.component.html
+++ b/query/src/app/home/home.component.html
@@ -50,14 +50,14 @@
         <ion-item lines="none">
           <ion-label position="fixed">University</ion-label>
           
-          <ion-text style="margin-left:10px;" *ngIf="university">{{university}}</ion-text>
-          <ion-text style="margin-left:10px;" *ngIf="!university">- -</ion-text>
+          <ion-text style="margin-left:8px;" *ngIf="university">{{university}}</ion-text>
+          <ion-text style="margin-left:8px;" *ngIf="!university">N/A</ion-text>
 
-          <ion-button (click)="presentModal()" slot="end">
+          <ion-button (click)="presentModal()" slot="end"> 
             <ion-icon slot="start" name="school"></ion-icon>
              Choose 
           </ion-button>
-        </ion-item>
+        </ion-item> 
 
         <ion-button class="ion-margin-top" type="submit" expand="block" color="tertiary" fill="solid"
           (click)="saveProfile()">
