--- a/query/src/app/modalpage/modalpage.component.html
+++ b/query/src/app/modalpage/modalpage.component.html
@@ -8,18 +8,20 @@
     <ion-title>Choose University</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content>
 
+ 
 <ion-searchbar
-  (ionInput)="onInput($event)"   
+  (ionChange)="onInput($event)"  debounce="500" 
   (ionCancel)="onCancel($event)" animated placeholder="Search...">
   
 </ion-searchbar>
 
+<ion-content>
+ 
 
   <ion-list>
     <ion-item *ngFor="let uni of universities" (click)="pickUni(uni)">
-      <ion-label >{{uni.name}}</ion-label>
+      <ion-label >{{uni.universities.name}}</ion-label>
     </ion-item>
   
   </ion-list>
