final phase 2 query app

--- a/query/src/app/home/home.component.html
+++ b/query/src/app/home/home.component.html
@@ -5,7 +5,7 @@
         <ion-icon slot="icon-only" name="exit-outline" ></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>User Profile</ion-title>
+    <ion-title>Edit Profile</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -31,7 +31,6 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <h3 style="margin-left:15px;">Edit Profile</h3>
         <ion-item>
           <ion-label position="fixed">Email</ion-label>
           <ion-input autocomplete="off" [(ngModel)]="email" name="email" type="email" disabled required #emailCtrl="ngModel"></ion-input>
