--- a/query/src/app/login/login.component.html
+++ b/query/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="tertiary">
-    <ion-title>User Profile Sample</ion-title>
+    <ion-title>Query User Profile Sample</ion-title>
   </ion-toolbar>
 </ion-header>
 
