search button block

--- a/sync/src/app/modalpage/modalpage.component.html
+++ b/sync/src/app/modalpage/modalpage.component.html
@@ -18,7 +18,7 @@
 </div>
 
 <div style="text-align: center;">  
-  <ion-button (click)="search()">Lookup</ion-button>
+  <ion-button (click)="search()" [disabled]="!nameSearchText">Lookup</ion-button>
 </div>
 
 
