--- a/query/src/app/modalpage/modalpage.component.html
+++ b/query/src/app/modalpage/modalpage.component.html
@@ -11,14 +11,14 @@
 
 
 <div>
-  <ion-searchbar [(ngModel)]="nameSearchText" placeholder="University name..."></ion-searchbar>
+  <ion-searchbar [(ngModel)]="nameSearchText" placeholder="University name..." ></ion-searchbar>
 </div>
 <div>
   <ion-searchbar [(ngModel)]="countrySearchText" placeholder="Country (Optional)" ></ion-searchbar>
 </div>
 
 <div style="text-align: center;">  
-  <ion-button (click)="search()">Lookup</ion-button>
+  <ion-button (click)="search()" [disabled]="!nameSearchText">Lookup</ion-button>
 </div>
 
 
