--- a/sync/src/app/home/home.component.html
+++ b/sync/src/app/home/home.component.html
@@ -22,8 +22,8 @@
       </div>
       <br />
       <ion-label style="font-size: 14px;">
-        <p>{{name}}</p>
-        <p>{{email}}</p>
+        <p style="color:white;">{{name}}</p>
+        <p style="color:white;">{{email}}</p>
       </ion-label>
     </ion-card-content>
   </ion-card>
